fix h2 alignment

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ h1 {
 
 h2 {
     font-size: 52px;
-    text-align: center;
+    text-align: left;
     text-transform: uppercase;
 }
 
